--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
 
         <label for="payment">I'm going to pay with:</label>
         <select id="payment" name="user_payment">
-          <option value="select_method">Select Payment Method</option>
-          <option value="credit card">Credit Card</option>
+          <option value="select_method" >Select Payment Method</option>
+          <option value="credit_card">Credit Card</option>
           <option value="paypal">PayPal</option>
           <option value="bitcoin">Bitcoin</option>
         </select>
